# beatrijs

./: Cargo.toml  makefile  sprt.py
.cargo/: config.toml
sketch/: hyperbola.rs  movegen.txt  old_make_move.txt  xray_rook_attack.txt
src/: bench.rs  bitboard.rs  bitmove.rs  board.rs  build.rs  color.rs  defs.rs  eval.rs  heuristics.rs  history.rs  input.rs  lib.rs  main.rs  makemove.rs  movegen.rs  movelist.rs  order.rs  params.rs  perft.rs  position.rs  psqt.rs  search.rs  search_info.rs  table.rs  uci.rs  utils.rs  zobrist.rs
src/speed/: board.rs  mod.rs  movegen.rs  perft.rs
src/tests/: perft.rs
