[package]
name = "beatrijs"
version = "0.1.0"
edition = "2021"
authors = ["Dewaeq"]
build = "src/build.rs"

[build-dependencies]
fastrand = "1.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

# [profile.release]
# lto = "fat"
# codegen-units = 1
# debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
# panic = 'unwind'
# incremental = false
# rpath = false
