[package]
name = "beatrijs"
version = "0.1.0"
edition = "2021"
authors = ["Dewaeq"]
build = "src/build.rs"

[build-dependencies]
fastrand = "1.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
lto = "fat"
debug = false
debug-assertions = false
overflow-checks = false
